--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "@derhuerst/gemini": "^1.1.1",
+    "dotenv": "^8.2.0",
     "mime-types": "^2.1.28"
   }
 }
